range timeslot select

--- a/src/DayColumn.scss
+++ b/src/DayColumn.scss
@@ -7,6 +7,10 @@
   .DayColumnCell {
     flex-grow: 1;
 
+    &.selected {
+      background-color: lightblue;
+    }
+
     &:nth-child(odd) {
       border-bottom: 1px solid grey;
     }
