--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
-.App {
-  text-align: center;
-  text-align: right;
-}
+// .App {
+//   text-align: center;
+//   text-align: right;
+// }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
